# Test_CI

./: .gitignore  CMakeLists.txt  CMakePresets.json  Test_CI.cpp  Test_CI.h  main.cpp
.github/workflows/: build.yml
cmake/: FindArcGISRuntime.cmake
qml/: Test_CIForm.qml  main.qml  qml.qrc
testing/: CMakeLists.txt  tst_testtest.cpp
